move servers info to server site and send serverIp instead serverId
